--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -32,7 +32,8 @@ block main
             .card-header Danh sách
                 .row 
                     .col-7
-                        +form-change-multi('products')
+                        if (roles.permission.includes('product_edit'))
+                            +form-change-multi('products')
                     
                     .col-2
                         select(class="form-control dropdown-toggle" name="type" sort)
@@ -83,12 +84,13 @@ block main
                             th(class='text-center') Giá
                             th(class='text-center') Vị trí
                             th(class='text-center') Trạng thái
+                            th(class='text-center') Người tạo
                             th(class='text-center') Hành Động
                     tbody
                         //- for như js
                         -for(let i = 0; i < products.length; ++i)
                             tr
-                                td(class="form-check")
+                                td(class="form-check text-center")
                                     input(
                                         type="checkbox" 
                                         name="id"
@@ -105,13 +107,23 @@ block main
                                 td #{products[i].title}
                                 td(class='text-center') #{products[i].price}$
 
-                                td(class='text-center')
-                                    input(
-                                        type="number"
-                                        class="form-control"
-                                        name="position"
-                                        value=products[i].position    
-                                    )
+                                if (roles.permission.includes('product_edit'))
+                                    td(class='text-center')
+                                        input(
+                                            type="number"
+                                            class="form-control"
+                                            name="position"
+                                            value=products[i].position    
+                                        )
+                                else 
+                                    td(class='text-center')
+                                        input(
+                                            type="number"
+                                            class="form-control"
+                                            name="position"
+                                            value=products[i].position    
+                                            readonly
+                                        )
 
                                 //- if else như js
                                 if (roles.permission.includes('product_edit'))
@@ -143,6 +155,13 @@ block main
                                                 class="badge badge-danger"
                                             ) Dừng hoạt động
 
+
+                                if (products[i].accountFullName)
+                                    td 
+                                        p #{products[i].accountFullName}
+                                        p #{products[i].createAt}
+                                else 
+                                    td Trống
 
                                 td(class='text-center') 
                                     if (roles.permission.includes('product_view'))
