Tạo log chỉnh sửa sản phẩm

--- a/views/admin/mixins/form-change-multi.pug
+++ b/views/admin/mixins/form-change-multi.pug
@@ -10,10 +10,14 @@ mixin form-change-multi(middle_path)
             .input-group-prepend
                 select(class="custom-select" name="type")
                     option(disabled selected ) --- Chọn trạng thái ---
-                    option(value="active") Hoạt động                            
-                    option(value="inactive") Dừng hoạt động                            
-                    option(value="delete-all") Xóa tất cả                            
-                    option(value="change-position") Thay đổi vị trí                            
+                    - let temp = middle_path.split('-').map(item => item.slice(-1) == 's' ? item.slice(0, -1) : item).join('-');
+                    if (roles.permission.includes(`${temp}_edit`))
+                        option(value="active") Hoạt động                            
+                        option(value="inactive") Dừng hoạt động   
+                        option(value="change-position") Thay đổi vị trí                            
+
+                    if (roles.permission.includes(`${temp}_delete`))                         
+                        option(value="delete-all") Xóa tất cả    
 
                 input(type="text" class="form-control d-none" name="ids" placeholder="id sản phẩm")
 
