--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -6,7 +6,7 @@
 
             if (roles.permission.includes('product-category_view'))
                 li 
-                    a(href=`${prefixAdmin}/products-category`) Danh mục 
+                    a(href=`${prefixAdmin}/products-category`) Danh mục sản phẩm
 
             if (roles.permission.includes('product_view'))
                 li 
