--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -68,6 +68,8 @@ block main
                             th(class='text-left') Tiêu đề
                             th(class='text-center') Vị trí
                             th(class='text-center') Trạng thái
+                            th(class='text-left') Người tạo
+                            th(class='text-left') Người cập nhật
                             th(class='text-center') Hành Động
                     tbody
                         +record-level-table(records, 1)
