Tạo log cho nhóm quyền

--- a/views/admin/mixins/record-level-table.pug
+++ b/views/admin/mixins/record-level-table.pug
@@ -71,13 +71,13 @@ mixin record-level-table(arr, level = 1)
                 td(class='text-left') 
                     p #{item.accountFullNameCreate} #{item.createAt}
             else 
-                td [Trống]
+                td Hệ thống
 
             if (item.accountFullNameUpdate)
                 td(class='text-left') 
                     p #{item.accountFullNameUpdate} #{item.updateAt}
             else 
-                td [Trống]
+                td Hệ thống
 
             td(class='text-center') 
                 a(
