--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -164,14 +164,14 @@ block main
                                         p #{products[i].accountFullNameCreate}
                                         p #{products[i].createAt}
                                 else 
-                                    td [Trống]
+                                    td Hệ thống
 
                                 if (products[i].accountFullNameUpdate)
                                     td 
                                         p #{products[i].accountFullNameUpdate}
                                         p #{products[i].updateAt}
                                 else 
-                                    td [Trống]
+                                    td Hệ thống
 
                                 td(class='text-center') 
                                     if (roles.permission.includes('product_view'))
