--- a/views/admin/pages/trash/product-deleted.pug
+++ b/views/admin/pages/trash/product-deleted.pug
@@ -66,7 +66,7 @@ block main
                                         p #{products[i].accountFullName}
                                         p #{products[i].deleteAt}
                                 else 
-                                    td Trống
+                                    td Hệ thống
 
                                 td(class='text-center') 
                                     button(
